add user test
